--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,9 +18,9 @@
             <li><a href="#" class="nav-link px-2 text-secondary">Conteúdos</a></li>
           </ul>
 
-          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-            <input type="search" class="form-control form-control-light text-bg-light" placeholder="Pesquisar..." aria-label="Search">
-          </form>
+          <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+            <button type="button" class="btn btn-outline-secondary" onclick="location.href='/pesquisar'">Pesquisar...</button>
+          </div>
 
           <div class="text-end">
             {{!-- <button type="button" class="btn btn-outline-light me-2">Login</button>
