--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,8 +14,8 @@
           </a>
 
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="#" class="nav-link px-2 text-secondary">Publicar</a></li>
-            <li><a href="#" class="nav-link px-2 text-secondary">Conteúdos</a></li>
+            <li><a href="/publicar" class="nav-link px-2 text-secondary">Publicar</a></li>
+            <li><a href="/conteudos" class="nav-link px-2 text-secondary">Conteúdos</a></li>
           </ul>
 
           <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
