feat(views/publicar): add content area

--- a/views/publicar.hbs
+++ b/views/publicar.hbs
@@ -11,8 +11,8 @@
         <input type="text" class="form-control" id="titulo" name="titulo" placeholder="ex. de frameworks para Back-end e Front-end" required>
       </div>
       <div class="mb-2">
-        <label for="descricao">Conteúdo<strong class="text-danger">*</strong></label>
-        <textarea class="form-control" id="descricao" name="descricao" rows="6" required></textarea>
+        <label for="conteudo">Conteúdo<strong class="text-danger">*</strong></label>
+        <textarea class="form-control" id="conteudo" name="conteudo" rows="6" required></textarea>
       </div>
       <div class="mb-2">
         <label for="fonte" class="form-label">Fonte(opcional)</label>
