--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,9 +19,9 @@
             <li><a href="/conteudos" class="nav-link px-2 text-secondary">Conteúdos</a></li>
           </ul>
 
-          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search" action="/pesquisar">
-            <input type="search" name="pesquisar" id="pesquisar" class="form-control" placeholder="Pesquisar...">
-          </form>
+          <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 d-grid gap-2" role="search">
+            <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#searchModal">Pesquisar</button>
+          </div>
 
           <div class="text-end">
             {{!-- <button type="button" class="btn btn-outline-light me-2">Login</button>
@@ -31,6 +31,41 @@
         </div>
       </div>
     </header>
+
+    {{!-- Searchs --}}
+    <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="searchModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title fs-5" id="searchModalLabel">
+              Fazer uma Pesquisa
+            </h3>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form action="/pesquisar" method="post">
+              <div class="mb-3">
+                <label for="type" class="form-label">Tipo de pesquisa</label>
+                <select class="form-select" id="type" name="type">
+                  <option value="usuario">Usuario</option>
+                  <option value="conteudo">Conteúdo</option>
+                  <option value="comentário">Comentário</option>
+                </select>
+              </div>
+              <div class="mb-3">
+                <label for="search" class="form-label">Pesquisa</label>
+                <input type="text" class="form-control" id="search" name="search">
+              </div>
+              <div class="mb-3">
+                <button type="submit" class="btn btn-dark">Pesquisar</button>
+                <button type="reset" class="btn btn-light">Limpar</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
     {{{body}}}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
