feat(views/layouts): search Modal

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -49,7 +49,7 @@
                 <select class="form-select" id="type" name="type">
                   <option value="usuario">Usuario</option>
                   <option value="conteudo">Conteúdo</option>
-                  <option value="comentário">Comentário</option>
+                  <option value="comentario">Comentário</option>
                 </select>
               </div>
               <div class="mb-3">
