--- a/views/search_content.hbs
+++ b/views/search_content.hbs
@@ -1,9 +1,9 @@
 <div class="container">
+  <h2 class="text-center mt-3 mb-3">
+    Publicações encontradas
+  </h2>
   <div class="row">
     <div class="col-md-6">
-      <h2 class="text-center">
-        Publicações encontradas
-      </h2>
       {{#each posts}}
         <div class="card text-bg-light p-3 mb-3">
           <div>
