feat(views/edit/profile): edit profile view

--- a/views/editar_perfil.hbs
+++ b/views/editar_perfil.hbs
@@ -15,7 +15,7 @@
         </div>
         <div class="mb-3">
           <label for="senha" class="form-label">Senha</label>
-          <input type="password" class="form-control" id="senha" name="senha" required>
+          <input type="password" class="form-control" id="senha" name="senha" value="{{senha}}" readonly>
         </div>
         <div class="mb-3">
           {{!-- Biografia --}}
