feat(README): add readme in project

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,7 +16,7 @@
 
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a href="/publicar" class="nav-link px-2 text-secondary">Publicar</a></li>
-            <li><a href="/conteudos" class="nav-link px-2 text-secondary">Conteúdos</a></li>
+            <li><a href="/fotos" class="nav-link px-2 text-secondary">Fotos</a></li>
           </ul>
 
           <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 d-grid gap-2" role="search">
