--- a/views/post.hbs
+++ b/views/post.hbs
@@ -56,17 +56,17 @@
     </div>
   {{/each}}
   {{#if comments}}
-  <h3 class="text-center">Comentários</h3>
-  <div class="card text-bg-light">
+    <h3 class="text-center">Comentários</h3>
     {{#each comments}}
-      <div class="card-body">
-        <strong><a href="/@{{nome}}" class="text-dark text-decoration-none">{{nome}}</a></strong>
-        <small class="text-muted">
-          {{data}}
-        </small>
-        <br>
-        <p>{{{comentario}}}</p>
-      </div>
+      <div class="card text-bg-light mb-3">
+        <div class="card-body">
+          <strong><a href="/@{{nome}}" class="text-dark text-decoration-none">{{nome}}</a></strong>
+          <small class="text-muted">
+            {{data}}
+          </small>
+          <br>
+          <p>{{{comentario}}}</p>
+        </div>
     {{/each}}
   {{/if}}
 </div>
