--- a/views/post.hbs
+++ b/views/post.hbs
@@ -56,17 +56,23 @@
     </div>
   {{/each}}
 </div>
-{{#if comments}}
-  <h3 class="text-center">Comentários</h3>
+
   {{#each comments}}
-    <div class="card text-bg-light mb-3">
-      <div class="card-body">
-        <strong><a href="/@{{nome}}" class="text-dark text-decoration-none">{{nome}}</a></strong>
-        <small class="text-muted">
-          {{data}}
-        </small>
-        <br>
-        <p>{{{comentario}}}</p>
+<div class="p-4">
+    <div class="container">
+      <div class="card text-bg-light p-4 mb-3">
+        <div>
+          <strong>
+            <a href="/@{{nome}}" class="text-dark">{{nome}}</a>
+          </strong>
+          <span class="text-muted">
+            {{data}}
+          </span>
+        </div>
+        <p>
+          {{{comentario}}}
+        </p>
       </div>
-  {{/each}}
-{{/if}}
+    </div>
+</div>
+{{/each}}
